--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
+    "firebase": "^9.18.0",
     "ionicons": "^6.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
