--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/in-app-purchase-2": "^5.36.0",
     "@ionic/react": "^6.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,12 +20,13 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
-    "cordova-plugin-purchase": "^13.3.11",
+    "cordova-plugin-purchase": "^11.0.0",
     "firebase": "^9.18.0",
     "ionicons": "^6.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.0",
     "sass": "^1.58.3",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
