--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "@fontsource/roboto": "^4.5.8",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/in-app-purchase-2": "^5.36.0",
-    "@ionic/react": "^6.6.0",
+    "@ionic/react": "^6.7.4",
     "@ionic/react-router": "^7.0.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
     "cordova-plugin-purchase": "^11.0.0",
     "firebase": "^9.18.0",
+    "history": "^4.7.2",
     "ionicons": "^6.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
